add oidc middleware
