# openapi.json
@@ -43,6 +43,11 @@
       }
     }
   },
+  "security": [
+    {
+      "oidc": []
+    }
+  ],
   "components": {
     "schemas": {
       "OnboardingRequest": {
@@ -54,6 +59,17 @@
         },
         "required": ["group"],
         "description": "Specification on which namespace to create"
+      }
+    },
+    "securitySchemes": {
+      "oidc": {
+        "type": "oauth2",
+        "flows": {
+          "authorizationCode": {
+            "authorizationUrl": "https://auth.lab.sspcloud.fr/auth/realms/sspcloud/protocol/openid-connect/auth",
+            "tokenUrl": "https://auth.lab.sspcloud.fr/auth/realms/sspcloud/protocol/openid-connect/token"
+          }
+        }
       }
     }
   }
